--- a/src/Exyzer.Apps.Web/wwwroot/index.html
+++ b/src/Exyzer.Apps.Web/wwwroot/index.html
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<title>Exyzer</title>
-		<base href="/Exyzer/" />
-		<link href="Exyzer.Apps.Web.styles.css" rel="stylesheet" />
-	</head>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<title>Exyzer</title>
+	<base href="~/Exyzer/" />
+	<link href="Exyzer.Apps.Web.styles.css" rel="stylesheet" />
+</head>
 	<body>
 		<div id="app">Loading...</div>
 		<div id="blazor-error-ui">
