--- a/src/Exyzer.Apps.Web/wwwroot/index.html
+++ b/src/Exyzer.Apps.Web/wwwroot/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<title>Exyzer</title>
-	<base href="~/Exyzer/" />
+	<base href="/" />
 	<link href="Exyzer.Apps.Web.styles.css" rel="stylesheet" />
 </head>
 	<body>
