ライセンス通知を追加

--- a/src/Exyzer.Apps.Web/wwwroot/index.html
+++ b/src/Exyzer.Apps.Web/wwwroot/index.html
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
+<!--*
+ * Exyzer
+ * Copyright (C) 2020-2021 Yigty.ORG; all rights reserved.
+ * Copyright (C) 2020-2021 Takym.
+ *
+ * distributed under the MIT License.
+**-->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta charset="UTF-8" />
